--- a/pages/04-gallery.html
+++ b/pages/04-gallery.html
@@ -36,6 +36,7 @@
     <div class="row-gallery"id="row-gallery">
       <h1>Gallery</h1>
     </div>
+    <div class="col-md-1"></div>
     <div class="col-md-11">
         <div class="row-image-button" id="image-button">
           <button type="button" class="btn-basic btn-sm">All</button>
@@ -50,6 +51,7 @@
       </div>
     </div>
     <div class="row-gallery-1">
+      <div class="col-md-1"></div>
       <div class="col-md-2">
         <img src="../assets/gray-square-background.png" class="img-responsive">
         <img src="../assets/about-us-img.png" class="img-responsive blank-img">
@@ -72,6 +74,7 @@
       </div>
     </div>
     <div class="row-gallery-1">
+      <div class="col-md-1"></div>
       <div class="col-md-2">
         <img src="../assets/gray-square-background.png" class="img-responsive">
         <img src="../assets/about-us-img.png" class="img-responsive blank-img">
@@ -94,6 +97,7 @@
       </div>
     </div>
     <div class="row-gallery-1">
+      <div class="col-md-1"></div>
       <div class="col-md-2">
         <img src="../assets/gray-square-background.png" class="img-responsive">
         <img src="../assets/about-us-img.png" class="img-responsive blank-img">
