Minor tweaks to about us css link

--- a/pages/05-products.html
+++ b/pages/05-products.html
@@ -11,10 +11,28 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
-
-<!--products-gallery-->
-
   <div class="container-fluid">
+    <!-- Products Banner -->
+    <div class="row about-us-back">
+      <div class="col-md-1"></div>
+      <div class="col-md-7">
+        <h1 class="text-left left-title">Products</h1>
+      </div>
+      <div class="col-md-3">
+        <p class="text-right">Home / Pages / Products</p>
+      </div>
+    </div>
+    <div class="row about-us-back">
+      <div class="col-md-2"></div>
+      <div class="col-md-8">
+        <img class="img-responsive image-center" src="../assets/about-us-img.png">
+      </div>
+      <div class="col-md-2"></div>
+    </div>
+    <div class="row about-us-back black-space-products">
+      <div class="col-md-12"></div>
+    </div>
+    <!-- Products- Gallery-->
     <div class="row-gallery"id="row-gallery">
       <h1>Products</h1>
     </div>
@@ -97,7 +115,7 @@
         <img src="../assets/about-us-img.png" class="img-responsive blank-img">
       </div>
     </div>
-  </div> <!---closing container-fluid--->
-
+  </div> 
+  <!---closing container-fluid -->
 </body>
 </html>
