--- a/pages/02-about-us.html
+++ b/pages/02-about-us.html
@@ -36,6 +36,11 @@
       </div>
       <div class="col-md-2"></div>
     </div>
+    <div class="row about-us-back black-space">
+      <div class="col-md-2"></div>
+      <div class="col-md-8"></div>
+      <div class="col-md-2"></div>
+    </div>
     <div class="row icons-row">
       <div class="col-md-2"></div>
       <div class="col-md-2">
