--- a/pages/03-contact.html
+++ b/pages/03-contact.html
@@ -8,7 +8,6 @@
   <link rel="stylesheet" href="../css/bootstrap.css">
   <link rel="stylesheet" href="../css/layout.css">
   <link rel="stylesheet" href="../css/03-contact.css">
-  <link rel="stylesheet" href="../css/02-about-us.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
@@ -19,7 +18,7 @@
         <h1 class="text-left left-title">Contact</h1>
       </div>
       <div class="col-md-3">
-        <p class="text-right">Home / Pages / About Us</p>
+        <p class="text-right">Home / Pages / Contact</p>
       </div>
     </div>
     <div class="row about-us-back black-space">
