--- a/pages/06-news.html
+++ b/pages/06-news.html
@@ -15,64 +15,59 @@
   <main class="container-fluid">
     <!--  News Cards-->
     <div class="row one news-cards">
-        <div class="col-md-2 t-box">
-            <a href="#"><img src="../assets/06-news-card.png" class = "img-responsive" alt="Gray Rectangle"></img></a>
-            <a href="#"><img src="../assets/about-us-img.png" class="img-responsive mtn-img"></img></a>
-            <div class="caption"
-            <h5>Duis autem vel eum iriure dolor in henderit</h5>
-            <p class="date">Date: 05, June, 2015</p>
-            <div class="border-line"></div>
-            <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor tincididunt ut lacreet dolore</p>
-            <button class="btn-read-more btn-default" role="button">Read More</button></div>
-        </div>
       <div class="col-md-2 t-box">
-          <img src="../assets/06-news-card.png" class = "img-responsive" alt="Gray Rectangle"></img>
-          <img src="../assets/about-us-img.png" class="img-responsive mtn-img"></img>
-          <h5>Duis autem vel eum iriure dolor in henderit</h5>
-          <p class="date">Date: 05, June, 2015</p>
-          <div class="border-line"></div>
-          <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor tincididunt ut lacreet dolore</p>
-          <button class="btn-read-more btn-default" role="button">Read More</button>
-      </div>
-        <div class="col-md-2 t-box">
-          <img src="../assets/06-news-card.png" class = "img-responsive" alt="Gray Rectangle"></img>
-          <i class="fas fa-play-circle"></i>
-          <h5>Duis autem vel eum iriure dolor in henderit</h5>
-          <p class="date">Date: 05, June, 2015</p>
-          <div class="border-line"></div>
-          <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor tincididunt ut lacreet dolore</p>
-          <button class="btn-read-more btn-default" role="button">Read More</button>
-        </div>
-      </div>
-    <div class="row two news-cards">
-      <div class="col-md-2 t-unique-box">
-        <div><p class="unique-black">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliquam erat volupat</p></div>
-        <p class="date">Date: 06, Feb, 2015</p>
+        <img src="../assets/06-news-card.png" class = "img-responsive" alt="Gray Rectangle"></img>
+        <img src="../assets/about-us-img.png" class="img-responsive mtn-img"></img>
+        <p class="hdline">Duis autem vel eum iriure dolor in henderit</p>
+        <p class="date">Date: 05, June, 2015</p>
+        <div class="border-line"></div>
+        <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor tincididunt ut lacreet dolore</p>
         <button class="btn-read-more btn-default" role="button">Read More</button>
       </div>
       <div class="col-md-2 t-box">
         <img src="../assets/06-news-card.png" class = "img-responsive" alt="Gray Rectangle"></img>
         <img src="../assets/about-us-img.png" class="img-responsive mtn-img"></img>
-        <div class="hdline">
-          <h5>Duis autem vel eum iriure dolor in henderit</h5>
-          <p class="date">Date: 05, June, 2015</p>
-          <div class="border-line"></div>
-          <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor tincididunt ut lacreet dolore</p>
-          <button class="btn-read-more btn-default" role="button">Read More</button>
-        </div>
+        <p class="hdline">Duis autem vel eum iriure dolor in henderit</p>
+        <p class="date">Date: 05, June, 2015</p>
+        <div class="border-line"></div>
+        <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor tincididunt ut lacreet dolore</p>
+        <button class="btn-read-more btn-default" role="button">Read More</button>
       </div>
       <div class="col-md-2 t-box">
-        <img src="../assets/06-news-card.png" class = "img-responsive" alt="Gray Rectangle"></img>
-        <img src="../assets/about-us-img.png" class="img-responsive mtn-img"></img>
-        <div class="hdline">
-          <h5>Duis autem vel eum iriure dolor in henderit</h5>
-          <p class="date">Date: 05, June, 2015</p>
-          <div class="border-line"></div>
-          <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor tincididunt ut lacreet dolore</p>
-          <button class="btn-read-more btn-default" role="button">Read More</button>
-        </div>
+        <img src="../assets/06-news-card.png" class = "img-responsive" alt="Gray Rectangle"></img></a>
+        <a class="press-play" href="#"><span class="fa fa-play-circle"></span></a>
+        <p class="hdline">Duis autem vel eum iriure dolor in henderit</p>
+        <p class="date">Date: 05, June, 2015</p>
+        <div class="border-line"></div>
+        <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor tincididunt ut lacreet dolore</p>
+        <button class="btn-read-more btn-default" role="button">Read More</button>
       </div>
+  </div>
+  <div class="row two news-cards">
+    <div class="col-md-2 t-unique-box">
+      <p class="unique-black">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliquam erat volupat</p></div>
+      <p class="date">Date: 06, Feb, 2015</p>
+      <button class="btn-read-more btn-default" role="button">Read More</button>
     </div>
+    <div class="col-md-2 t-box">
+      <img src="../assets/06-news-card.png" class = "img-responsive" alt="Gray Rectangle"></img>
+      <img src="../assets/about-us-img.png" class="img-responsive mtn-img"></img>
+      <p class="hdline">Duis autem vel eum iriure dolor in henderit</p>
+      <p class="date">Date: 05, June, 2015</p>
+      <div class="border-line"></div>
+      <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor tincididunt ut lacreet dolore</p>
+      <button class="btn-read-more btn-default" role="button">Read More</button>
+    </div>
+    <div class="col-md-2 t-box">
+      <img src="../assets/06-news-card.png" class = "img-responsive" alt="Gray Rectangle"></img>
+      <img src="../assets/about-us-img.png" class="img-responsive mtn-img"></img>
+      <p class="hdline">Duis autem vel eum iriure dolor in henderit</p>
+      <p class="date">Date: 05, June, 2015</p>
+      <div class="border-line"></div>
+      <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor tincididunt ut lacreet dolore</p>
+      <button class="btn-read-more btn-default" role="button">Read More</button>
+    </div>
+  </div>
 </main>
 </body>
 </html>
