--- a/pages/05-products.html
+++ b/pages/05-products.html
@@ -37,6 +37,7 @@
     <div class="row-gallery"id="row-gallery">
       <h1>Products</h1>
     </div>
+    <div class="col-md-1"></div>
     <div class="col-md-11">
         <div class="row-image-button" id="image-button">
           <button type="button" class="btn-basic btn-sm">All</button>
@@ -51,6 +52,7 @@
       </div>
     </div>
     <div class="row-gallery-1">
+      <div class="col-md-1"></div>
       <div class="col-md-2">
         <img src="../assets/gray-square-background.png" class="img-responsive">
         <img src="../assets/about-us-img.png" class="img-responsive blank-img">
@@ -73,6 +75,7 @@
       </div>
     </div>
     <div class="row-gallery-1">
+      <div class="col-md-1"></div>
       <div class="col-md-2">
         <img src="../assets/gray-square-background.png" class="img-responsive">
         <img src="../assets/about-us-img.png" class="img-responsive blank-img">
@@ -95,6 +98,7 @@
       </div>
     </div>
     <div class="row-gallery-1">
+      <div class="col-md-1"></div>
       <div class="col-md-2">
         <img src="../assets/gray-square-background.png" class="img-responsive">
         <img src="../assets/about-us-img.png" class="img-responsive blank-img">
