Add header html and css to every page

--- a/pages/02-about-us.html
+++ b/pages/02-about-us.html
@@ -13,6 +13,36 @@
 </head>
 <body>
   <div class="container-fluid">
+    <!-- Header -->
+    <header class="row" id="header-module">
+      <div class="col-md-4">
+        <div class="logo"></div>
+      </div>
+      <div class="col-md-8">
+        <nav class="navbar navbar-inverse">
+          <ul class="nav navbar-nav">
+            <li><a href="#"><i class="fa fa-envelope" aria-hidden="true"> info@hellohelp.com</i></a></li>
+            <li><a href="#"><i class="fa fa-phone" aria-hidden="true"> +440 8753692088</i></a></li>
+            <li class="dropdown"><a href="#">Log In <span class="caret"></span></a></li>
+            <li><a href="#">EN <span class="caret"></span></a></li>
+            <li><a href="#" class="fa fa-facebook" alt="facebook logo"></a></li>
+            <li><a href="#" class="fa fa-twitter" alt="twitter logo"></a></li>
+            <li><a href="#" class="fa fa-instagram" alt="instagram logo"></a></li>
+            <li><a href="#" class="fa fa-envelope" alt="envelope logo"></a></li>
+          </ul>
+          <ul class="nav navbar-nav">
+            <li><a class="active" href="../index.html">Home</a></li>
+            <li><a href="../pages/02-about-us.html">About Us</a></li>
+            <li class="dropdown"><a href="../pages/09-services.html">Services <span class="caret"></span></a></li>
+            <li><a href="../pages/05-products.html">Products <span class="caret"></span></a></li>
+            <li><a href="../pages/04-gallery.html">Gallery</a></li>
+            <li><a href="../pages/03-contact.html">Contact</a></li>
+            <li><a href="#"><i class="fa fa-search" aria-hidden="true"></i></a></li>
+          </ul>
+        </nav>
+      </div>
+    </header>
+    <!-- About Us -->
     <div class="row about-us-back">
       <div class="col-md-1"></div>
       <div class="col-md-7">
