--- a/pages/08-news-image.html
+++ b/pages/08-news-image.html
@@ -12,6 +12,36 @@
 </head>
 <body>
   <main class="container-fluid">
+    <!-- Header -->
+    <header class="row" id="header-module">
+      <div class="col-md-4">
+        <div class="logo"></div>
+      </div>
+      <div class="col-md-8">
+        <nav class="navbar navbar-inverse">
+          <ul class="nav navbar-nav">
+            <li><a href="#"><i class="fa fa-envelope" aria-hidden="true"> info@hellohelp.com</i></a></li>
+            <li><a href="#"><i class="fa fa-phone" aria-hidden="true"> +440 8753692088</i></a></li>
+            <li class="dropdown"><a href="#">Log In <span class="caret"></span></a></li>
+            <li><a href="#">EN <span class="caret"></span></a></li>
+            <li><a href="#" class="fa fa-facebook" alt="facebook logo"></a></li>
+            <li><a href="#" class="fa fa-twitter" alt="twitter logo"></a></li>
+            <li><a href="#" class="fa fa-instagram" alt="instagram logo"></a></li>
+            <li><a href="#" class="fa fa-envelope" alt="envelope logo"></a></li>
+          </ul>
+          <ul class="nav navbar-nav">
+            <li><a class="active" href="../index.html">Home</a></li>
+            <li><a href="../pages/02-about-us.html">About Us</a></li>
+            <li class="dropdown"><a href="../pages/09-services.html">Services <span class="caret"></span></a></li>
+            <li><a href="../pages/05-products.html">Products <span class="caret"></span></a></li>
+            <li><a href="../pages/04-gallery.html">Gallery</a></li>
+            <li><a href="../pages/03-contact.html">Contact</a></li>
+            <li><a href="#"><i class="fa fa-search" aria-hidden="true"></i></a></li>
+          </ul>
+        </nav>
+      </div>
+    </header>
+    <!-- News Content -->
     <div class="row">
       <div class="col-md-2 gutter"></div>
       <section class="col-md-8 news-header">
@@ -34,6 +64,7 @@
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Error velit a architecto iure aliquid aut dignissimos maiores odit eius suscipit, officiis nobis exercitationem! Nobis explicabo beatae sit dolore perspiciatis? Porro! Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet sunt, molestias placeat quod voluptatum deleniti ipsa suscipit culpa tenetur ex reiciendis neque eos quas, veritatis, cumque quaerat nihil voluptates quis!</p>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto laudantium itaque labore tempora, neque eius consectetur, corrupti consequuntur nihil eligendi obcaecati laborum, ratione sed dolore pariatur expedita ut quisquam porro.</p>
       </section>
+      <!-- Popular and Recent Column -->
       <section class="col-md-2 popular-recent">
         <div class="row">
           <div class="col-md-6 popular-header">
