added hotel infront of row and box in html and css.

--- a/01-about-hotel.html
+++ b/01-about-hotel.html
@@ -17,23 +17,23 @@
           </div>
         </div>
       </div>
-      <div class="row">
+      <div class="row hotel">
         <div class="col-md-1 padding"></div>
-        <div class="col-md-3 box">
+        <div class="col-md-3 box hotel">
           <p class="text-center box-title"><strong>RESTURANTS & BANQUETS</strong></p>
           <p class="text-center box-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do.</p>
           <p class="text-center box-desc"><em>Read More<em>
             <span class="glyphicon glyphicon-play" aria-hidden="true"></span>
           </p>
         </div>
-        <div class="col-md-3 box">
+        <div class="col-md-3 hotel">
           <p class="text-center box-title"><strong>ROOMS</strong></p>
           <p class="text-center box-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do.</p>
           <p class="text-center box-desc"><em>Read More<em>
             <span class="glyphicon glyphicon-play" aria-hidden="true"></span>
           </p>
         </div>
-        <div class="col-md-3 box">
+        <div class="col-md-3 box hotel">
           <p class="text-center box-title"><strong>BAR</strong></p>
           <p class="text-center box-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do.</p>
           <p class="text-center box-desc"><em>Read More<em>
@@ -42,23 +42,23 @@
         </div>
         <div class="col-md-1 padding"></div>
       </div>
-      <div class="row">
+      <div class="row hotel">
         <div class="col-md-1 padding"></div>
-        <div class="col-md-3 box">
+        <div class="col-md-3 box hotel">
           <p class="text-center box-title"><strong>GYM</strong></p>
           <p class="text-center box-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do.</p>
           <p class="text-center box-desc"><em>Read More<em>
             <span class="glyphicon glyphicon-play" aria-hidden="true"></span>
           </p>
         </div>
-        <div class="col-md-3 box">
+        <div class="col-md-3 box hotel">
           <p class="text-center box-title"><strong>SPA</strong></p>
           <p class="text-center box-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do.</p>
           <p class="text-center box-desc"><em>Read More<em>
             <span class="glyphicon glyphicon-play" aria-hidden="true"></span>
           </p>
         </div>
-        <div class="col-md-3 box">
+        <div class="col-md-3 box hotel">
           <p class="text-center box-title"><strong>CAR PARKING</strong></p>
           <p class="text-center box-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do.</p>
           <p class="text-center box-desc"><em>Read More<em>
