--- a/pages/06-news.html
+++ b/pages/06-news.html
@@ -35,7 +35,8 @@
       </div>
       <div class="col-md-2 t-box">
         <img src="../assets/06-news-card.png" class = "img-responsive" alt="Gray Rectangle"></img></a>
-        <a class="press-play" href="#"><span class="fa fa-play-circle"></span></a>
+        <img src="../assets/about-us-img.png" class="img-responsive mtn-img"></img>
+        <!-- <a class="press-play" href="#"><span class="fa fa-play-circle"></span></a> -->
         <p class="hdline">Duis autem vel eum iriure dolor in henderit</p>
         <p class="date">Date: 05, June, 2015</p>
         <div class="border-line"></div>
@@ -45,9 +46,9 @@
   </div>
   <div class="row two news-cards">
     <div class="col-md-2 t-unique-box">
-      <p class="unique-black">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliquam erat volupat</p></div>
-      <p class="date">Date: 06, Feb, 2015</p>
-      <button class="btn-read-more btn-default" role="button">Read More</button>
+      <p class="unique-black">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliquam erat volupat</p>
+      <p class="unique-date">Date: 06, Feb, 2015</p>
+      <button class="unique-btn-read-more btn-default" role="button">Read More</button>
     </div>
     <div class="col-md-2 t-box">
       <img src="../assets/06-news-card.png" class = "img-responsive" alt="Gray Rectangle"></img>
@@ -65,9 +66,13 @@
       <p class="date">Date: 05, June, 2015</p>
       <div class="border-line"></div>
       <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor tincididunt ut lacreet dolore</p>
-      <button class="btn-read-more btn-default" role="button">Read More</button>
+      <button class="btn-read-more btn-default btn-xs" role="button">Read More</button>
     </div>
   </div>
+  <div class="col-md-6">
+      <button class="btn-view-all btn-default btn-sm" role="button">View All</button>
+  </div>
+
 </main>
 </body>
 </html>
