still needs work

--- a/pages/06-news.html
+++ b/pages/06-news.html
@@ -66,12 +66,13 @@
       <p class="date">Date: 05, June, 2015</p>
       <div class="border-line"></div>
       <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor tincididunt ut lacreet dolore</p>
-      <button class="btn-read-more btn-default btn-xs" role="button">Read More</button>
+      <button class="btn-read-more btn-default" role="button">Read More</button>
     </div>
   </div>
-  <div class="col-md-6">
-      <button class="btn-view-all btn-default btn-sm" role="button">View All</button>
+  <div class="row three news-cards">
+    <button class="btn-view-all btn-default btn-sm" role="button">View All</button>
   </div>
+</div>
 
 </main>
 </body>
