play button inserted in row 1 card 3, need to insert view-all-btn

--- a/pages/06-news.html
+++ b/pages/06-news.html
@@ -12,67 +12,68 @@
 </head>
 <body>
 
-<main class="container-fluid">
-  <!--  News Cards-->
-  <div class="row one news-cards">
-    <div class="col-md-2 t-box">
-      <img src="../assets/06-news-card.png" class = "img-responsive" alt="Gray Rectangle"></img>
-      <img src="../assets/about-us-img.png" class="img-responsive mtn-img"></img>
-      <p class="hdline">Duis autem vel eum iriure dolor in henderit</p>
-      <p class="date">Date: 05, June, 2015</p>
-      <div class="border-line"></div>
-      <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor tincididunt ut lacreet dolore</p>
-      <button class="btn-read-more btn-default" role="button">Read More</button>
+  <main class="container-fluid">
+    <!--  News Cards-->
+    <div class="row one news-cards">
+      <div class="col-md-2 t-box">
+        <img src="../assets/06-news-card.png" class = "img-responsive" alt="Gray Rectangle"></img>
+        <img src="../assets/about-us-img.png" class="img-responsive mtn-img"></img>
+        <p class="hdline">Duis autem vel eum iriure dolor in henderit</p>
+        <p class="date">Date: 05, June, 2015</p>
+        <div class="border-line"></div>
+        <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor tincididunt ut lacreet dolore</p>
+        <button class="btn-read-more btn-default" role="button">Read More</button>
+      </div>
+      <div class="col-md-2 t-box">
+        <img src="../assets/06-news-card.png" class = "img-responsive" alt="Gray Rectangle"></img>
+        <img src="../assets/about-us-img.png" class="img-responsive mtn-img"></img>
+        <p class="hdline">Duis autem vel eum iriure dolor in henderit</p>
+        <p class="date">Date: 05, June, 2015</p>
+        <div class="border-line"></div>
+        <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor tincididunt ut lacreet dolore</p>
+        <button class="btn-read-more btn-default" role="button">Read More</button>
+      </div>
+      <div class="col-md-2 t-box">
+        <img src="../assets/06-news-card.png" class = "img-responsive" alt="Gray Rectangle"></img>
+        <img src="../assets/play-btn.png" class="img-responsive press-play" alt="play-btn"></img>
+        <!-- <img src="../assets/about-us-img.png" class="img-responsive mtn-img"></img> -->
+        <!-- <a class="press-play video" href="#"><span class="fa fa-play-circle"></span></a> -->
+        <p class="hdline">Duis autem vel eum iriure dolor in henderit</p>
+        <p class="date">Date: 05, June, 2015</p>
+        <div class="border-line"></div>
+        <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor tincididunt ut lacreet dolore</p>
+        <button class="btn-read-more btn-default" role="button">Read More</button>
+      </div>
     </div>
-    <div class="col-md-2 t-box">
-      <img src="../assets/06-news-card.png" class = "img-responsive" alt="Gray Rectangle"></img>
-      <img src="../assets/about-us-img.png" class="img-responsive mtn-img"></img>
-      <p class="hdline">Duis autem vel eum iriure dolor in henderit</p>
-      <p class="date">Date: 05, June, 2015</p>
-      <div class="border-line"></div>
-      <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor tincididunt ut lacreet dolore</p>
-      <button class="btn-read-more btn-default" role="button">Read More</button>
+    <div class="row two news-cards">
+      <div class="col-md-2 t-unique-box">
+        <p class="unique-black">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliquam erat volupat</p>
+        <p class="unique-date">Date: 06, Feb, 2015</p>
+        <button class="unique-btn-read-more btn-default" role="button">Read More</button>
+      </div>
+      <div class="col-md-2 t-box">
+        <img src="../assets/06-news-card.png" class = "img-responsive" alt="Gray Rectangle"></img>
+        <img src="../assets/about-us-img.png" class="img-responsive mtn-img"></img>
+        <p class="hdline">Duis autem vel eum iriure dolor in henderit</p>
+        <p class="date">Date: 05, June, 2015</p>
+        <div class="border-line"></div>
+        <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed</p>
+        <button class="btn-read-more btn-default" role="button">Read More</button>
+      </div>
+      <div class="col-md-2 t-box">
+        <img src="../assets/06-news-card.png" class = "img-responsive" alt="Gray Rectangle"></img>
+        <img src="../assets/about-us-img.png" class="img-responsive mtn-img"></img>
+        <p class="hdline">Duis autem vel eum iriure dolor in henderit</p>
+        <p class="date">Date: 05, June, 2015</p>
+        <div class="border-line"></div>
+        <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor tincididunt ut lacreet dolore</p>
+        <button class="btn-read-more btn-default" role="button">Read More</button>
+      </div>
     </div>
-    <div class="col-md-2 t-box">
-      <img src="../assets/06-news-card.png" class = "img-responsive" alt="Gray Rectangle"></img></a>
-      <img src="../assets/about-us-img.png" class="img-responsive mtn-img"></img>
-      <!-- <a class="press-play" href="#"><span class="fa fa-play-circle"></span></a> -->
-      <p class="hdline">Duis autem vel eum iriure dolor in henderit</p>
-      <p class="date">Date: 05, June, 2015</p>
-      <div class="border-line"></div>
-      <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor tincididunt ut lacreet dolore</p>
-      <button class="btn-read-more btn-default" role="button">Read More</button>
+    <div class="row three news-cards">
+      <button class="btn-view-all btn-default btn-sm" role="button">View All</button>
     </div>
-</div>
-<div class="row two news-cards">
-  <div class="col-md-2 t-unique-box">
-    <p class="unique-black">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliquam erat volupat</p>
-    <p class="unique-date">Date: 06, Feb, 2015</p>
-    <button class="unique-btn-read-more btn-default" role="button">Read More</button>
   </div>
-  <div class="col-md-2 t-box">
-  <img src="../assets/06-news-card.png" class = "img-responsive" alt="Gray Rectangle"></img>
-  <img src="../assets/about-us-img.png" class="img-responsive mtn-img"></img>
-  <p class="hdline">Duis autem vel eum iriure dolor in henderit</p>
-  <p class="date">Date: 05, June, 2015</p>
-  <div class="border-line"></div>
-  <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed</p>
-  <button class="btn-read-more btn-default" role="button">Read More</button>
-</div>
-<div class="col-md-2 t-box">
-<img src="../assets/06-news-card.png" class = "img-responsive" alt="Gray Rectangle"></img>
-<img src="../assets/about-us-img.png" class="img-responsive mtn-img"></img>
-<p class="hdline">Duis autem vel eum iriure dolor in henderit</p>
-<p class="date">Date: 05, June, 2015</p>
-<div class="border-line"></div>
-<p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor tincididunt ut lacreet dolore</p>
-<button class="btn-read-more btn-default" role="button">Read More</button>
-</div>
-</div>
-<div class="row three news-cards">
-<button class="btn-view-all btn-default btn-sm" role="button">View All</button>
-</div>
-</div>
 
 </main>
 </body>
