--- a/pages/04-gallery.html
+++ b/pages/04-gallery.html
@@ -64,6 +64,7 @@
     <div class="row-gallery"id="row-gallery">
       <h1>Gallery</h1>
     </div>
+    <div class="col-md-1"></div>
     <div class="col-md-11">
         <div class="row-image-button" id="image-button">
           <button type="button" class="btn-basic btn-sm">All</button>
@@ -78,6 +79,7 @@
       </div>
     </div>
     <div class="row-gallery-1">
+      <div class="col-md-1"></div>
       <div class="col-md-2">
         <img src="../assets/gray-square-background.png" class="img-responsive">
         <img src="../assets/about-us-img.png" class="img-responsive blank-img">
@@ -100,6 +102,7 @@
       </div>
     </div>
     <div class="row-gallery-1">
+      <div class="col-md-1"></div>
       <div class="col-md-2">
         <img src="../assets/gray-square-background.png" class="img-responsive">
         <img src="../assets/about-us-img.png" class="img-responsive blank-img">
@@ -122,6 +125,7 @@
       </div>
     </div>
     <div class="row-gallery-1">
+      <div class="col-md-1"></div>
       <div class="col-md-2">
         <img src="../assets/gray-square-background.png" class="img-responsive">
         <img src="../assets/about-us-img.png" class="img-responsive blank-img">
