added view-btn, need to change background gray color to lighter gray, if time play with icomoon (make background color of play btn black)

--- a/pages/06-news.html
+++ b/pages/06-news.html
@@ -37,7 +37,7 @@
         <img src="../assets/06-news-card.png" class = "img-responsive" alt="Gray Rectangle"></img>
         <img src="../assets/play-btn.png" class="img-responsive press-play" alt="play-btn"></img>
         <!-- <img src="../assets/about-us-img.png" class="img-responsive mtn-img"></img> -->
-        <!-- <a class="press-play video" href="#"><span class="fa fa-play-circle"></span></a> -->
+        <!-- <a class="press-play" href="#"><span class="fa fa-play-circle"></span></a> -->
         <p class="hdline">Duis autem vel eum iriure dolor in henderit</p>
         <p class="date">Date: 05, June, 2015</p>
         <div class="border-line"></div>
@@ -71,7 +71,7 @@
       </div>
     </div>
     <div class="row three news-cards">
-      <button class="btn-view-all btn-default btn-sm" role="button">View All</button>
+      <button class="col-md-4 btn-view-all btn-default" role="button">View All</button>
     </div>
   </div>
 
